--- a/css/formbuilder_default.css
+++ b/css/formbuilder_default.css
@@ -33,3 +33,22 @@ input.fbdisabled,textarea.fbdisabled{border:0 !important;background-color:transp
 *******************************************************************************/
 div.cleditorMain, div.cleditorToolbar, div.cleditorGroup, div.cleditorButton, div.cleditorDivider{margin-top:auto !important;}
 div.cleditorMain{float:right !important;}
+/*******************************************************************************
+    Password Strength Meter
+*******************************************************************************/
+.is0{background:url(progressImg1.png) no-repeat 0 0;width:190px;height:7px;}
+.is10{background-position:0 -7px;}
+.is20{background-position:0 -14px;}
+.is30{background-position:0 -21px;}
+.is40{background-position:0 -28px;}
+.is50{background-position:0 -35px;}
+.is60{background-position:0 -42px;}
+.is70{background-position:0 -49px;}
+.is80{background-position:0 -56px;}
+.is90{background-position:0 -63px;}
+.is100{background-position:0 -70px;}
+.fbtypepassword .poor{color:#f00;}
+.fbtypepassword .weak{color:#CC6600;}
+.fbtypepassword .ok{color:#00CC99;}
+.fbtypepassword .good{color:#009900;}
+.fbtypepassword .strong{color:#009900;font-weight:bold;}
