--- a/css/default/skin.css
+++ b/css/default/skin.css
@@ -97,3 +97,5 @@ input.fbbutton {
   padding-top: 15px;
   text-align: center !important;
 }
+fieldset.fbfieldset li span span{display:none;}
+fieldset.fbouter div.fbicon span{display:none;}
