--- a/css/simple/skin.css
+++ b/css/simple/skin.css
@@ -11,4 +11,5 @@ label.fblabel{width:200px;font-weight:normal;margin-right:auto;}
 input.fbtext,input.fbfile,input.fbpassword,select.fbselect,select.fbmultiselect,textarea.fbtextarea{width:370px;}
 .fbrequired{background-image:url();}
 fieldset.fbfieldset li.fbtypecheckbox span.fbrequired,fieldset.fbfieldset li span span {float:none;}
+fieldset.fbfieldset li.fbtypecheckbox span{margin-right: -25px;}
 li.fbtypecheckbox input.fbcheckbox{margin-left:260px;}
