--- a/css/simple/skin.css
+++ b/css/simple/skin.css
@@ -7,7 +7,7 @@
 form, input, select, textarea {margin: 0;padding: 0;}
 .fbform fieldset{border:0;}
 .fbform ol{border-top:1px solid #aaa;}
-label.fblabel{width:200px;margin-right:auto;}
+label.fblabel,span.fblabel{width:200px;margin-right:auto;}
 input.fbtext,input.fbfile,input.fbpassword,select.fbselect,select.fbmultiselect,textarea.fbtextarea{width:370px;}
 .fbrequired{background-image:url();}
 fieldset.fbfieldset li.fbtypecheckbox span.fbrequired,fieldset.fbfieldset li span span {float:none;}
