new method ArrayRemove in wbArray; added class wbFormBuilderCaptcha; some more tweaking

--- a/css/simple/skin.css
+++ b/css/simple/skin.css
@@ -15,4 +15,4 @@ fieldset.fbfieldset li.fbtypecheckbox span{margin-right: -25px;}
 li.fbtypecheckbox input.fbcheckbox{margin-left:260px;}
 li.fbtypecheckbox label.fblabel{float:none;}
 .fbbuttonpane{border-top:1px solid #aaa;padding-top:25px;}
-div.cleditorMain {margin-right:50px !important;}
+div.cleditorMain {float:none !important; margin-left:374px !important;}
