--- a/css/simple/skin.css
+++ b/css/simple/skin.css
@@ -12,8 +12,9 @@ input.fbtext,input.fbfile,input.fbpassword,select.fbselect,select.fbmultiselect,
 .fbrequired{background-image:url();}
 fieldset.fbfieldset li.fbtypecheckbox span.fbrequired,fieldset.fbfieldset li span span {float:none;}
 fieldset.fbfieldset li.fbtypecheckbox span{margin-right: -25px;}
-li.fbtypecheckbox input.fbcheckbox{margin-left:260px;}
-li.fbtypecheckbox label.fblabel{float:none;}
+li.fbtypecheckbox input.fbcheckbox{margin-left:230px;}
+li.fbtypecheckbox span.fblabel{float:none;}
+div.fbradiogroup{margin-top:-25px;}
 .fbbuttonpane{border-top:1px solid #aaa;padding-top:25px;}
 div.jqte {float:none !important; margin: 0 374px 5px 0 !important;border-color: #aaa !important;}
 div.jqte .jqte_tool_label {height:24px !important;}
