--- a/css/formbuilder_default.css
+++ b/css/formbuilder_default.css
@@ -8,7 +8,7 @@
 fieldset.fbfieldset{margin:15px auto;}
 fieldset.fbfieldset legend.fblegend{font-weight:700;}
 fieldset.fbfieldset ol{list-style:none;padding:1em 1em 0;}
-fieldset.fbfieldset li{float:left;clear:left;width:100%;padding-bottom:1em;text-align:left;list-style:none;}
+fieldset.fbfieldset li{float:left;width:100%;padding-bottom:1em;text-align:left;list-style:none;}
 fieldset.fbfieldset li span.fbspan20{width:20px;height:20px;min-height:20px;display:block;float:left;padding:2px;}
 fieldset.fbfieldset li span span{padding:0;margin-top:-5px;}
 fieldset.fbfieldset li span.fbinfotext{height:auto;}
